# KangKlip

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_local.sh
.github/: anchor-build.Dockerfile  deploy.sh
.github/workflows/: build-images.yml  build-worker.yml  deploy-anchor.yml
backend/: main.py  models.py  nosana.py  package-lock.json  package.json  r2.py  requirements.txt  settings.py  storage.py
backend/src/: config.ts  credits_client.ts  index.ts  models.ts  nosana.ts  r2.ts  solana.ts  storage.ts
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/about/: page.tsx
frontend/app/components/: wallet-button.tsx
frontend/app/generate-clips/: page.tsx
frontend/app/jobs/[job_id]/: page.tsx
frontend/app/legal/: page.tsx
frontend/app/lib/: jobToken.ts
frontend/app/pricing/: page.tsx
frontend/app/providers/: auth.tsx
frontend/app/terms/: page.tsx
frontend/app/topup/: page.tsx
programs/kangklip_credits/: Cargo.toml
programs/kangklip_credits/src/: lib.rs
scripts/: local_worker_test.py
worker/: Dockerfile  README.md  __init__.py  config.py  io_utils.py  llm.py  main.py  render.py  requirements.txt  storage.py  transcript.py  worker.py
