[package]
name = "kangklip_credits"
version = "0.1.0"
description = "KangKlip credits program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kangklip_credits"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

